# tinte

./: .gitignore  Cargo.toml  PKGBUILD  README.md  org.tinte.Tinte.desktop  tinte
matugen_templates/: config.toml
src/: color.rs  config.rs  extraction.rs  lib.rs  main.js  main.rs  template.rs
src/components/: ActionBar.js  LocalWallpaperBrowser.js  PaletteEditor.js  SettingsDialog.js
src/components/palette/: color-swatch-grid.js
src/components/palette-editor/: ColorPaletteSection.js  EmptyState.js  WallpaperSection.js
src/constants/: colors.js
src/services/: SettingsManager.js  ThemeExporter.js  thumbnail-service.js
src/utils/: ConfigWriter.js  SignalManager.js  color-utils.js  file-utils.js  imagemagick-color-extraction.js  matugen-extraction.js  ui-helpers.js  wallpaper-setter.js
templates/: btop.theme  ghostty.conf  gtk.css  hyprland.conf  hyprlock.conf  mako.ini  neovim.lua  niri.kdl  swayosd.css  vicinae.toml  walker.css  wofi.css
